projects/vb6parse/snapshots/parsers/cst/file_operations/unlock/unlock_preserves_whitespace.snap
---
source: projects/vb6parse/tests/file_operations/unlock.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: UnlockStatement
      children:
        - kind: UnlockKeyword
          text: Unlock
        - kind: Whitespace
          text: "    "
        - kind: IdentifierExpression
          children:
            - kind: Octothorpe
              text: "#"
            - kind: IntegerLiteral
              text: "1"
        - kind: Whitespace
          text: "  "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "  "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "5"
        - kind: Whitespace
          text: "    "
    - kind: Newline
      text: "\n"
